Проведен рефакторинг; дописаны тесты; доделан CLI